feat: add update expense functionality (#60)
* feat: Add update expense functionality

* feat: add find expense by id

* feat: Add update expense functionality
