# cmd/api/controllers/expenses.go
@@ -12,6 +12,7 @@ type ExpensesController struct {
 	createExpense   expenses.ExpenseCreatable
 	setToPaid       expenses.ExpenseToPaidSetteable
 	togglableIsPaid expenses.ExpenseToPaidTogglable
+	updateExpense   expenses.ExpenseUpdateable
 	group           *echo.Group
 }
 
@@ -19,12 +20,14 @@ func NewExpensesController(
 	createExpense expenses.ExpenseCreatable,
 	setToPaid expenses.ExpenseToPaidSetteable,
 	togglableIsPaid expenses.ExpenseToPaidTogglable,
+	updateExpense expenses.ExpenseUpdateable,
 	e *echo.Echo, //nolint:varnamelen
 ) *ExpensesController {
 	return &ExpensesController{
 		createExpense:   createExpense,
 		setToPaid:       setToPaid,
 		togglableIsPaid: togglableIsPaid,
+		updateExpense:   updateExpense,
 		group:           e.Group("/expenses"),
 	}
 }
@@ -33,6 +36,7 @@ func (c *ExpensesController) Register() {
 	c.group.POST("", c.create)
 	c.group.POST("/to_paid", c.toPaid)
 	c.group.POST("/toggle_is_paid", c.toggleIsPaid)
+	c.group.PUT("/update", c.update)
 }
 
 // @Summary     Create an expense
@@ -98,4 +102,26 @@ func (c *ExpensesController) toggleIsPaid(ctx echo.Context) error {
 		return errors.CreateResponseFromError(ctx, err)
 	}
 	return ctx.JSON(http.StatusOK, got)
+}
+
+// @Summary     Updates an expense
+// @Description Updates an expense data depending if it is recurrent or not
+// @Tags        expenses
+// @Accept      json
+// @Produce     json
+// @Param       expense_update_data body expenses.UpdateExpenseInput true "ID to toggle is paid status"
+// @Success     200                 "Expense was updated"
+// @Failure     400                 {object} validator.ValidationError "When a request does not fulfill need data"
+// @Failure     500
+// @Router      /expenses/update [put]
+func (c *ExpensesController) update(ctx echo.Context) error {
+	var request expenses.UpdateExpenseInput
+	if err := ctx.Bind(&request); err != nil {
+		return errors.CreateResponseFromError(ctx, err)
+	}
+	err := c.updateExpense.UpdateExpense(ctx.Request().Context(), &request)
+	if err != nil {
+		return errors.CreateResponseFromError(ctx, err)
+	}
+	return ctx.NoContent(http.StatusOK)
 }
