# cmd/api/docs/swagger.json
@@ -132,6 +132,46 @@
                 }
             }
         },
+        "/expenses/update": {
+            "put": {
+                "description": "Updates an expense data depending if it is recurrent or not",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "expenses"
+                ],
+                "summary": "Updates an expense",
+                "parameters": [
+                    {
+                        "description": "ID to toggle is paid status",
+                        "name": "expense_update_data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/expenses.UpdateExpenseInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Expense was updated"
+                    },
+                    "400": {
+                        "description": "When a request does not fulfill need data",
+                        "schema": {
+                            "$ref": "#/definitions/validator.ValidationError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/health_check": {
             "get": {
                 "description": "It does a ping to db and returns service version",
@@ -388,6 +428,23 @@
                     "type": "boolean"
                 },
                 "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "expenses.UpdateExpenseInput": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
